tests/pact/bad/bad-name-interface-length.repl
(interface tooooooooooooooo-looooooooooooooooooooooooooooong
  (defun f ()))
